Checkpoint 17 - cm130bb936

--- a/tests/l0/appgateway/l0test/CMakeLists.txt
+++ b/tests/l0/appgateway/l0test/CMakeLists.txt
@@ -45,6 +45,7 @@ set(APPGW_L0_SOURCES
     AppGateway_JsonRpcResolveTests.cpp
     Resolver_Configure_And_ResolveTests.cpp
     Responder_BehaviorTests.cpp
+    AppGatewayResponderImplementation_Tests.cpp
     ContextUtils_ConversionTests.cpp
     AppGatewayImplementation_BranchTests.cpp
 )
