--- a/plugin/AppGateway/CMakeLists.txt
+++ b/plugin/AppGateway/CMakeLists.txt
@@ -33,19 +33,6 @@ set(PLUGIN_APPGATEWAY_AUTOSTART "false" CACHE STRING "Automatically start AppGat
 
 message("Setup ${MODULE_NAME} v${MODULE_VERSION}")
 
-# Ensure standard install directories are defined (SYSCONFDIR, LIBDIR, etc.).
-# Without this, CMAKE_INSTALL_SYSCONFDIR can be empty and the config install
-# destination becomes an absolute path like "/app-gateway" (which fails in CI).
-include(GNUInstallDirs)
-if(NOT DEFINED CMAKE_INSTALL_SYSCONFDIR OR "${CMAKE_INSTALL_SYSCONFDIR}" STREQUAL "")
-    set(CMAKE_INSTALL_SYSCONFDIR "etc")
-endif()
-
-# Enforce upstream-expected C++ standard at the project level.
-# (User request: try C++11 first; fallback handled by build script.)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 find_package(${NAMESPACE}Plugins REQUIRED)
 find_package(${NAMESPACE}Definitions REQUIRED)
 find_package(CompileSettingsDebug CONFIG REQUIRED)
@@ -57,46 +44,12 @@ add_library(${MODULE_NAME} SHARED
         Resolver.cpp
 	Module.cpp)
 
-# Include plugin-local headers first (e.g., Module.h is located next to sources)
-target_include_directories(${MODULE_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(${MODULE_NAME} PRIVATE ../helpers)
+target_include_directories(${MODULE_NAME} PRIVATE ./resolutions)
 
-# Plugin-local resolutions
-target_include_directories(${MODULE_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/resolutions)
-
-# Prefer repo-local stub JSON headers (e.g., interfaces/json/JAppGatewayResolver.h)
-# over SDK placeholders under dependencies/install/include/WPEFramework/interfaces/json.
-# This also makes repo-local interfaces (app-gateway2/interfaces/...) visible.
-target_include_directories(${MODULE_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../..)
-
-# Make repo interfaces directly reachable via the normal include mechanism.
-# This is required so that Module.h's include chain can resolve:
-#   #include <Ids.h>
-# without modifying any plugin/AppGateway .cpp/.h files or force-including headers.
-#
-# Use an absolute path derived from PROJECT_SOURCE_DIR (PLUGIN_SRC root) to avoid
-# dependence on the caller's current working directory.
-get_filename_component(APPGATEWAY_REPO_INTERFACES_DIR
-    "${PROJECT_SOURCE_DIR}/../../interfaces"
-    ABSOLUTE
-)
-target_include_directories(${MODULE_NAME} PRIVATE ${APPGATEWAY_REPO_INTERFACES_DIR})
-
-# Allow the build script to inject additional include directories while keeping
-# deterministic precedence (plugin-local + repo-local first).
-#
-# IMPORTANT:
-# - This is expected to be provided as a CMake cache variable (LIST):
-#     -DAPPGATEWAY_EXTRA_INCLUDE_DIRS:LIST="dir1;dir2;dir3"
-# - We append it AFTER existing include dirs so plugin-local and repo-local stubs
-#   remain highest precedence, while helper injection becomes available.
-# - The build script keeps helpers/rdkservices-comcast/helpers first, then
-#   helpers/entservices-infra/helpers, plus repo-root helpers and interfaces.
-set(APPGATEWAY_EXTRA_INCLUDE_DIRS "" CACHE STRING "Extra include directories for AppGateway target (CMake list)")
-if(NOT "${APPGATEWAY_EXTRA_INCLUDE_DIRS}" STREQUAL "")
-    target_include_directories(${MODULE_NAME} PRIVATE ${APPGATEWAY_EXTRA_INCLUDE_DIRS})
-endif()
-
-
+set_target_properties(${MODULE_NAME} PROPERTIES
+        CXX_STANDARD 11
+        CXX_STANDARD_REQUIRED YES)
 
 target_compile_definitions(${MODULE_NAME} PRIVATE MODULE_NAME=Plugin_${PLUGIN_NAME})
 
@@ -132,9 +85,7 @@ target_link_options(${MODULE_NAME} PRIVATE -Wl,-z,defs)
 install(TARGETS ${MODULE_NAME}
         DESTINATION lib/${STORAGE_DIRECTORY}/plugins)
 
-# Install under the configured sysconf dir (default becomes <prefix>/etc),
-# avoiding writes to system /etc during local builds.
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/resolutions/resolution.base.json
-        DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/app-gateway")
+        DESTINATION "/etc/app-gateway/")
 
 write_config(${PLUGIN_NAME})
